# test-spack

./: .gitignore  README.md
kokkos/: CMakeLists.txt  bit-reversal-kokkos.cpp  run.sh
